--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "madebyraygun/constant-contact",
     "description": "Basic Contact Contact signup form",
     "type": "craft-plugin",
-    "version": "0.0.1",
+    "version": "0.1.0",
     "keywords": [
         "craft",
         "cms",
@@ -23,20 +23,13 @@
     ],
     "require": {
         "craftcms/cms": "^3.0.0-RC1",
-        "constantcontact/constantcontact": "dev-development"
+        "classy-org/constantcontact-php-client": "^1.1.0"
     },
-    "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
           "madebyraygun\\constantcontact\\": "src/"
         }
     },
-    "repositories": [
-        {
-          "type": "git",
-          "url": "https://github.com/constantcontact/php-sdk.git"
-        }
-    ],
     "extra": {
         "name": "Constant Contact",
         "handle": "constant-contact",
