--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "madebyraygun/constant-contact",
-    "description": "Basic Contact Contact signup form",
+    "description": "Basic Contact Contact integration for Craft CMS",
     "type": "craft-plugin",
     "version": "0.1.0",
     "keywords": [
