--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "madebyraygun/constant-contact",
     "description": "Basic Contact Contact integration for Craft CMS",
     "type": "craft-plugin",
-    "version": "0.1.1",
+    "version": "0.1.2",
     "keywords": [
         "craft",
         "cms",
@@ -23,7 +23,7 @@
     ],
     "require": {
         "craftcms/cms": "^3.0.0-RC1",
-        "classy-org/constantcontact-php-client": "^1.1.0"
+        "guzzlehttp/guzzle": "^6.1"
     },
     "autoload": {
         "psr-4": {
